# meowspace

./: .example.env  Cargo.toml  Rocket.toml
migrations/2019-04-09-131202_create_cats/: up.sql
src/: auth.rs  config.rs  lib.rs  main.rs  schema.rs
src/db/: cats.rs  mod.rs
src/models/: birds.rs  cats.rs  mod.rs
src/routes/: cats.rs  mod.rs
tests/: cats.rs  common.rs
